--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,9 +27,10 @@ body {background:#f5f5f5;}
 .dl_wrap dd {color:#6f7070;flex:1;font-size:12px;font-weight:500;line-height:1.45;}
 
 /* (공통) TAB */
-.tab_ty01 {display:flex;justify-content:space-between;}
+.tab_ty01 {display:flex;justify-content:center}
 /* .tab_ty01 > * {width:auto;padding:4px 16px 5px;border-radius:52px;border:1px solid rgb(181,181,181);font-size:10px;font-weight:300;} */
-.tab_ty01 > * {min-width:60px;padding:4px 0 5px;border-radius:52px;border:1px solid rgb(181,181,181);font-size:10px;font-weight:300;text-align:center;}
+.tab_ty01 > * {min-width:60px;margin-left:9px;padding:4px 0 5px;border-radius:52px;border:1px solid rgb(181,181,181);font-size:10px;font-weight:300;text-align:center;}
+.tab_ty01 > *:first-child {margin-left:0}
 .tab_ty01 > *.active {border-color:rgba(255,229,209,0.47);background-color: rgba(255,229,209,0.47);font-weight:600;}
 .tab_ty01 > * a {font:inherit}
 
@@ -82,8 +83,8 @@ body {background:#f5f5f5;}
 .form_ty01 select {background:url(../images/arrow_down@2x.png) no-repeat 96% 50% / 16px;}
 .form_ty01 select {-moz-appearance:none;-webkit-appearance:none;appearance:none;}
 .form_ty01 select::-ms-expand {display:none}
-.form_ty01 .row {margin:0 0 32px}
-.form_ty01 button[type="submit"] {display:block;margin:-8px 0 0;background-color:rgb(253,150,71);text-align:center;line-height:40px;height:40px;width:100%;color:#fff;border-radius:24px;font-weight:500;}
+.form_ty01 .row {margin:0 0 25px}
+.form_ty01 button[type="submit"] {display:block;margin:-8px 0 0;background-color:rgb(253,150,71);text-align:center;line-height:40px;height:40px;width:100%;color:#fff;border-radius:24px;font-weight:600;}
 .form_ty02 input,
 .form_ty02 textarea {width:100%;border:1px solid #C3CBCF;padding:10px;vertical-align:top;margin:0 0 10px;font-size:12px}
 .form_ty02 input::placeholder,
@@ -149,7 +150,7 @@ body {background:#f5f5f5;}
 .btn_ty01.orange {background:#FD9647}
 .btn_ty01.border {border:1px solid #85bc9d;color:#85bc9d !important;background:#fff}
 .btn_ty02 {display:inline-block;width:83px;height:22px;line-height:22px;border-radius:10px;font-size:10px;text-align:center;background-color:#fff3e9;}
-.btn_ty03 {display:block;width:100%;height:64px;line-height:64px;font-size:16px;color:#fff;text-align:center;background-color:#f19249;}
+.btn_ty03 {display:block;width:100%;height:64px;line-height:64px;font-size:16px;font-weight:600;color:#fff;text-align:center;background-color:#f19249;}
 
 /* switch */
 input[type="checkbox"] {display: none;}
@@ -164,12 +165,13 @@ input[type="checkbox"] {display: none;}
 .input__on-off:checked + .label__on-off .marble {left: 16px;}
 
 /* (공통)vertical swiper */
-.middle_banner {max-width:390px;width:100%;margin:0 auto}
+/* .middle_banner {max-width:390px;width:100%;margin:0 auto} */
+.middle_banner {width:100%}
 .middle_banner .swiper-pagination-bullet {width:5px;height:5px;background-color:#85BC9D}
 .middle_banner .swiper-container-vertical > .swiper-pagination-bullets .swiper-pagination-bullet {margin:3px 0;}
 .middle_banner .swiper-pagination-bullet-active {background-color:#FD9647}
 .middle_banner .swiper-wrapper {height:0 !important;padding:0 0 78px;text-align:center;}
-.middle_banner .swiper-wrapper img {height:78px;width:auto}
+.middle_banner .swiper-wrapper img {height:78px;width:100%}
 
 /* (공통)썸네일 회원정보 */
 .profile_wrap {display:flex;align-items:center;margin:0 0 32px;position:relative;}
@@ -284,7 +286,7 @@ input[type="checkbox"] {display: none;}
 .layer_reserve .agree_wrap {margin:0 0 25px}
 .layer_reserve .box {display:flex;position:relative;padding:10px 14px;border-radius:10px;background-color:rgb(247,247,248);align-items:center;justify-content:space-between;}
 .layer_reserve .box span {font-size:12px;color:#b6b6b6}
-.layer_reserve .box strong {color:#707070}
+.layer_reserve .box strong {color:#707070;font-size:15px;}
 .layer_reserve .text {overflow:scroll;height:80px;margin:5px 0 20px;padding:14px;font-size:12px;color:#707070}
 .layer_reserve .agree_wrap .box label {color:#707070;font-weight:bold;font-size:14px;}
 .layer_reserve .terms_list {padding:5px 0}
@@ -292,7 +294,7 @@ input[type="checkbox"] {display: none;}
 .layer_reserve .sticky_area {overflow:scroll;height:60vh}
 .layer_reserve .sticky_area .top_fixed {position:sticky;top:0;z-index:10;padding:30px 7%;background-color:#fff;}
 .layer_reserve .scrolled {padding:0 7%}
-.layer_reserve .info_wrap .name {margin:0 0 10px;font-size:16px;font-weight:500;letter-spacing:-0.5px;}
+.layer_reserve .info_wrap .name {margin:0 0 10px;font-size:16px;font-weight:600;letter-spacing:-0.5px;}
 
 /* 호텔예약 */
 .layer_reserve .box_wrap {display:flex;flex-wrap:wrap;justify-content:space-between;}
@@ -334,7 +336,7 @@ input[type="checkbox"] {display: none;}
 .board_list .swiper-slide {height:80px;background-color:#4A8B9B}
 .board_list .list > li > a {display:flex;padding:16px 15px;align-items:center;justify-content:space-between;border-bottom:1px solid rgba(0,0,0,0.12)}
 .board_list .list > li > a h5 {display:block;width:88%;font-size:14px;font-weight:300;white-space:nowrap;text-overflow:ellipsis;overflow:hidden;line-height:1.2;}
-.board_list .list > li > a span {font-size:10px;color:rgb(112,112,112)}
+.board_list .list > li > a span {width:80px;font-size:10px;color:rgb(112,112,112);text-align:right;}
 
 /* 게시판 - 보기 */
 .board_view h4 {overflow:hidden;margin:0 0 18px;padding:0 0 10px;font-size:10px;color:rgb(112,112,112);border-bottom:1px solid #d1d1d1;font-weight:400;font-size:15px;color:#000;}
@@ -387,23 +389,23 @@ input[type="checkbox"] {display: none;}
 .mypage02 .tab h4 {position:absolute;top:0;font-size:15px;font-weight:400;margin:0 0 10px}
 .mypage02 .tab .panel {display:none;left:0;width:100%;padding:25px 0 0}
 .mypage02 .tab > li:first-child {margin-left:0}
-.mypage02 .tab > li:nth-child(2) h4 {left:80px}
+.mypage02 .tab > li:nth-child(2) h4 {left:75px}
 .mypage02 .tab > li.active h4 {font-weight:bold;}
 .mypage02 .tab > li.active h4 span {position: relative;z-index: 2;}
 .mypage02 .tab > li.active h4:before {position:absolute;left:0;bottom:0;z-index:2;width:100%;height:3px;background:rgb(133,188,157);content:''}
 .mypage02 .tab > li.active .panel {display:block}
-.mypage02 .tab .list > li {display:flex;border-bottom:1px solid #707070;padding:10px 0;height:50px;align-items:flex-end;}
-.mypage02 .tab .list > li.strong {font-weight:600;}
-/* .mypage02 .tab .list > li.strong .date {font-weight:600;} */
+.mypage02 .tab .list > li {display:flex;border-bottom:1px solid #707070;padding:0 0 6px;height:50px;align-items:flex-end;}
+/* .mypage02 .tab .list > li.strong {font-weight:600;} */
+.mypage02 .tab .list > li .date {font-weight:600;text-align:right;}
 .mypage02 .tab .list > li > span {font-size:15px;}
-.mypage02 .tab .list .cate {width:25%}
-.mypage02 .tab .list .place {width:50%}
+.mypage02 .tab .list .cate {width:23%}
+.mypage02 .tab .list .place {width:52%}
 .mypage02 .tab .list .date {width:35%}
 .mypage02 .tab .more {display:block;width:100%;margin:10px 0 0;padding:10px 0;text-align:center;font-size:15px;color:#707070}
 .mypage02 .tab .more img {width:16px;}
 .mypage02 .btn_logout {margin:50px 0 0}
 .mypage02 .period {margin:0 0 30px}
-.mypage02 .btn_review {width:35%;color:#B5B5B5;font-weight:600;font-size:14px;font-family: 'Noto Sans KR', sans-serif;text-align:right;}
+.mypage02 .btn_review {width:35%;color:#B5B5B5;font-weight:600;font-size:14px;text-align:right;}
 .layer_mypage02 .popup {padding:20px}
 .layer_mypage02 .popup .btn_close {font-size:20px}
 .layer_mypage02 .period_form {margin:40px 0 0;text-align:center;}
@@ -411,23 +413,30 @@ input[type="checkbox"] {display: none;}
 .layer_mypage02 .period_form img {width:23.5px;margin-left:10px}
 .layer_mypage02 .period_form input[type="text"] {width:30%;border:0;border-bottom:1px solid #aaa;border-radius:0;}
 .layer_mypage02 .period_form label {margin-left:4px}
-.layer_mypage02 .btn_wrap {padding:20px 0 0;text-align:right;}
+.layer_mypage02 .btn_wrap {padding:10px 0 0;text-align:right;}
 .layer_mypage02 .popup_content > * {display:none;}
 .layer_mypage02 .popup_content .btn_wrap button {font-size:12px;font-weight:600;}
 .layer_mypage02.lp_period .popup_content .period_form {display:block;}
+.layer_mypage02.lp_period .popup_content .period_form .btn_wrap {padding:20px 0 0}
 .layer_mypage02.lp_review .popup_content .star_wrap {display:block;text-align:center;}
 .layer_mypage02.lp_review .popup_content .star_wrap h4 {margin:0 0 10px;font-size:12px;font-weight:500;}
+
+/* 나의상담내역 */
+.mypage09 .tab .list > li .date {font-weight:400;}
+.mypage09 .tab .list > li.strong {font-weight:600;}
+.mypage09 .tab .list > li.strong .date {font-weight:600;}
 
 /* main */
 #main .keyvisual {position:relative;}
 #main .keyvisual .swiper-pagination-bullet {border-radius:0;}
-#main .keyvisual .swiper-pagination {display:inline-block;position:absolute;right:0;bottom:20px;left:auto;width:auto;padding:5px 15px;border-top-left-radius:15px;border-bottom-left-radius:15px;color:#fff;background-color:rgba(128,128,128,0.75);font-size:10px;}
-#main .menu_01 > ul {padding:28px 0 25px}
-#main .menu_01 > ul > li > a {font-size:11px}
-#main .menu_01 > ul > li > a:before {margin-bottom:7px}
-#main .menu_01 > ul > li p {padding:10px 0 0;font-size:14px;color:rgb(112,112,112)}
-#main .menu_01 > ul > li img {width:94px}
-#main .menu_01 .menu_01_list {display:flex;justify-content:space-evenly;text-align:center;}
+#main .keyvisual .swiper-pagination {display:inline-block;position:absolute;right:0;bottom:20px;left:auto;width:auto;padding:5px 15px;border-top-left-radius:15px;border-bottom-left-radius:15px;color:#fff;background-color:rgba(128,128,128,0.75);font-size:12px;}
+#main .menu_01 .menu_01_list {display:flex;padding:28px 0 25px;justify-content:center;text-align:center;}
+#main .menu_01 .menu_01_list > li {margin-left:20px}
+#main .menu_01 .menu_01_list > li:first-child {margin-left:0}
+#main .menu_01 .menu_01_list > li > a {font-size:11px}
+#main .menu_01 .menu_01_list > li > a:before {margin-bottom:7px}
+#main .menu_01 .menu_01_list > li p {padding:10px 0 0;font-size:14px;color:rgb(112,112,112)}
+#main .menu_01 .menu_01_list > li img {width:94px}
 #main .menu_02 {padding:0 0 10px}
 #main .menu_02 > ul > li > a {display:flex;padding:11.5px;font-size:12px;align-items:center;justify-content:center;}
 #main .menu_02 > ul > li:nth-child(1) > a img {width:34px;margin-right:12px;}
@@ -515,7 +524,7 @@ input[type="checkbox"] {display: none;}
 .reservation_list .inner {padding:25px 5%}
 .reservation_list .map iframe {width:100%}
 .reservation_list .map .searchbar_ty03 {margin:-23px 15px 0}
-.reservation_list .title_area {display:flex;justify-content:space-between;align-items:center;}
+.reservation_list .title_area {display:flex;padding-bottom:5px;justify-content:space-between;align-items:center;}
 .reservation_list .title_area .sorting > * {margin-left:15px}
 .reservation_list .hospital_list > li {margin:15px 0 0}
 .reservation_list .hospital_list > li > a {display:flex;align-items:center;}
@@ -536,7 +545,7 @@ input[type="checkbox"] {display: none;}
 .reservation .title_area .like.on img.on {display:inline-block}
 .reservation .title_area .like.on p {color:#FD9647}
 .reservation .title_area h4 {color:rgb(112,112,112);font-size:24px;font-weight:600;}
-.reservation .title_area p {color:rgb(112,112,112);font-size:15px;padding:2px 0 0}
+.reservation .title_area p {color:rgb(112,112,112);font-size:13px;padding:2px 0 0}
 .reservation .calender .month {display:block;margin:0 0 10px;padding:0 3.5%;font-size:25px;color:rgb(112,112,112);letter-spacing:-1px;}
 .reservation h5 {position:relative;font-size:15px;color:rgb(112,112,112);margin:0 0 10px}
 .reservation .calender .month_area {position:relative;}
@@ -606,9 +615,12 @@ input[type="checkbox"] {display: none;}
 .diagnosis_02 .swiper-button-next {width:10px;right:17px}
 
 /* 호텔예약화면01 */
-.hospital_01 .select_date {display:flex;position:fixed;right:30px;top:160px;z-index:100;width:62px;height:62px;border-radius:50%;text-align:center;color:#fff;background-color:#85BC9D;flex-direction:column;justify-content:center;align-items:center;}
+.hospital_01 .select_date_wrap {position:fixed;left:0;top:160px;z-index:99;width:100%;padding:0 30px;text-align:right;}
+.hospital_01 .select_date {display:inline-flex;width:62px;height:62px;border-radius:50%;text-align:center;color:#fff;background-color:#85BC9D;flex-direction:column;justify-content:center;align-items:center;box-shadow:2px 3px 2px 0 rgba(0,0,0,0.16);}
 .hospital_01 .select_date img {width:28.5px}
 .hospital_01 .select_date p {padding:3px 0 0;font-size:11px}
+
+/* #araaa {position:fixed;left:20px;top:20px;z-index:99;width:100px;height:100px;background-color:greenyellow;} */
 
 /* 호텔예약화면02 */
 .hospital_02 .calender .swiper-slide {width:calc(100% / 7)}
@@ -647,17 +659,18 @@ input[type="checkbox"] {display: none;}
 /* 캘린더 */
 .ui-widget-header {background-color:transparent;border:0}
 .ui-datepicker {}
-.ui-datepicker .ui-datepicker-title {margin:0;padding:0 10px;text-align:left;letter-spacing:-1px;}
+.ui-datepicker .ui-datepicker-title {margin:0;padding:0 10px;text-align:left}
+.ui-datepicker .ui-datepicker-title span {font-size:16px}
 .ui-widget.ui-widget-content {position:fixed !important;left:50% !important;top:50% !important;width:85%;padding:25px 17px 20px;transform:translate(-50%, -50%);border:0;border-radius:13px;z-index:100 !important}
 .ui-datepicker-calendar {width:100%;text-align:center;}
-.ui-datepicker-calendar thead span {font-size:10px;color:rgb(112,112,112);font-weight:400;}
+.ui-datepicker-calendar thead span {font-size:11px;color:rgba(60,60,67, 0.3);font-weight:400;}
 .ui-datepicker-current-day {background-color: red;}
 .ui-datepicker-calendar thead th {padding:0 0 15px;font-family: 'Noto Sans KR', sans-serif;font-size:12px;font-weight:500;}
 .ui-datepicker-calendar thead th span {font:inherit !important;}
 .ui-datepicker-calendar td {width:40px;height:37px}
 .ui-datepicker-calendar td span,
-.ui-datepicker-calendar td a {height:37px;border:0;line-height:37px;font-size:13px}
-.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {display:inline-block;padding:0;border:0;text-align:center;border-radius:50%;background-color:transparent;width:36px;height:36px;font-size:14px}
+.ui-datepicker-calendar td a {height:37px;border:0;line-height:37px;font-size:17px}
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {display:inline-block;padding:0;border:0;text-align:center;border-radius:50%;background-color:transparent;width:36px;height:36px}
 .ui-datepicker-current-day {background-color:transparent;}
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, a.ui-button:active, .ui-button:active, .ui-button.ui-state-active:hover {background-color:#fd9647;color:#fff}
 .ui-widget-header .ui-icon {background:url(../images/arrow-right-orange@2x.png) no-repeat;background-size:cover;}
@@ -736,7 +749,7 @@ input[type="checkbox"] {display: none;}
 .mypage_ .card_list .panel {display:none;padding:14px 0 4px}
 .mypage_ .card_list .panel .row {display:flex;position:relative;padding:5px 15px;align-items:center;justify-content:space-between;font-size:12px;color:#707070}
 .mypage_ .card_list .panel .row .del {font-size:11px;color:#707070}
-.mypage_ .icon_ty01 {font-size:11px;font-weight:500;}
+.mypage_ .icon_ty01 {font-size:12px;font-weight:500;}
 
 /* 마이페이지 - 계좌 연동하기 */
 .mypage_account .add {display:block;margin:15px 0 0;padding:5px 0;text-align:center;color:#707070;font-size:14px;}
@@ -771,7 +784,7 @@ input[type="checkbox"] {display: none;}
 .mypage_modify .swiper-slide {text-align:center;width:30%}
 .mypage_modify .swiper-slide:not(.selected) {display:flex;justify-content:center;align-items:center;height:auto}
 .mypage_modify .swiper-slide:not(.selected) .profile_wrap .thumb {transform:scale(0.6);transform-origin:50%;}
-.mypage_modify .swiper-slide:not(.selected) .profile_wrap .info h5 {color:#D3D3D3;font-size:12px}
+.mypage_modify .swiper-slide:not(.selected) .profile_wrap .info h5 {color:#D3D3D3;font-size:12px;padding-top:0;margin-top:-5px}
 .mypage_modify .item {display:inline-block;overflow:hidden;position:relative;width:50px;height:50px;border-radius:50%;background-color:#d3d3d3;vertical-align:middle;}
 .mypage_modify .item.add {display:flex;align-items:center;justify-content:center;width:77px;height:77px}
 .mypage_modify .item.add img {width:14px;transform:translate(-50%, -50%);left:50%}
