--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,12 +66,12 @@ body {background:#f5f5f5;}
 #bottomMenu .category > li {flex:1}
 #bottomMenu .category > li > a {display:block;padding:13px 0 15px;color:#c3cbce;font-size:10px}
 #bottomMenu .category > li.active > a {color: #707070;}
-#bottomMenu .category > li > a:before {display:block;width:37px;height:37px;margin:0 auto 4px;content:'';background:url(../images/cate01_off@2x.png) no-repeat 50% 50% / 30px;}
+#bottomMenu .category > li > a:before {display:block;width:100%;height:37px;margin:0 auto 4px;content:'';background:url(../images/cate01_off@2x.png) no-repeat 50% 50% / 30px;}
 #bottomMenu .category > li.active > a:before {background:url(../images/cate01_on@2x.png) no-repeat 50% 50% / 30px;}
-#bottomMenu .category > li:nth-child(2) > a:before {background:url(../images/cate02_off@2x.png) no-repeat 50% 50% / 37px}
-#bottomMenu .category > li.active:nth-child(2) > a:before {background:url(../images/cate02_on@2x.png) no-repeat 50% 50% / 37px;}
-#bottomMenu .category > li:nth-child(3) > a:before {background:url(../images/cate03_off@2x.png) no-repeat 50% 50% / 30px;}
-#bottomMenu .category > li.active:nth-child(3) > a:before {background:url(../images/cate03_on@2x.png) no-repeat 50% 50% / 30px;}
+#bottomMenu .category > li:nth-child(2) > a:before {background:url(../images/cate02_off@2x.png) no-repeat 50% 50% / 26px}
+#bottomMenu .category > li.active:nth-child(2) > a:before {background:url(../images/cate02_on@2x.png) no-repeat 50% 50% / 26px;}
+#bottomMenu .category > li:nth-child(3) > a:before {background:url(../images/cate03_off@2x.png) no-repeat 50% 50% / 50px;}
+#bottomMenu .category > li.active:nth-child(3) > a:before {background:url(../images/cate03_on@2x.png) no-repeat 50% 50% / 50px;}
 #bottomMenu .category > li:nth-child(4) > a:before {background:url(../images/cate04_off@2x.png) no-repeat 50% 50% / 30px;}
 #bottomMenu .category > li.active:nth-child(4) > a:before {background:url(../images/cate04_on@2x.png) no-repeat 50% 50% / 30px;}
 #bottomMenu .category > li:nth-child(5) > a:before {background:url(../images/cate05_off@2x.png) no-repeat 50% 50% / 30px;}
